--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,16 @@ img {
   background-color: var(--navyblue);
   padding-bottom: 188px;
   padding-top: 188px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg.jpg);
 }
+
 .hero-title {
   display: block;
   color: var(--white);
