--- a/css/styles.css
+++ b/css/styles.css
@@ -395,3 +395,9 @@ ul {
   letter-spacing: 0.02em;
   width: 264px;
 }
+
+/**
+  |============================
+  | 
+  |============================
+*/
