--- a/css/styles.css
+++ b/css/styles.css
@@ -132,8 +132,21 @@ ul {
   color: var(--navyblue);
 }
 .nav-link {
+  position: relative;
   padding-top: 24px;
   padding-bottom: 24px;
+}
+.nav-link::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.nav-link.current::after {
+  background-color: var(--ocean);
 }
 
 .adress {
@@ -269,7 +282,7 @@ ul {
 
 /**
   |============================
-  | advanrages
+  | advantages
   |============================
 */
 .advantages {
@@ -293,6 +306,21 @@ ul {
 
 .advantages-list-item {
   flex-basis: calc((100% - 24px * 3) / 4);
+}
+
+.advantages-list-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+  margin-bottom: 8px;
+  border-radius: 4px;
+  border: 1px solid var(--slate);
+  background: var(--cloud);
+}
+
+.advantages-list-icon {
 }
 
 .advantages-text {
