--- a/css/styles.css
+++ b/css/styles.css
@@ -410,10 +410,14 @@ ul {
   background-color: var(--white);
 }
 
+.project-foto-img {
+}
+
 .box {
   position: relative;
   overflow: hidden;
 }
+
 .overlay {
   position: absolut;
   top: 0;
@@ -425,7 +429,6 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 40 32 164 32;
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
