--- a/css/styles.css
+++ b/css/styles.css
@@ -289,9 +289,6 @@ ul {
   background: var(--cloud);
 }
 
-.advantages-list-icon {
-}
-
 .advantages-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -410,40 +407,48 @@ ul {
   background-color: var(--white);
 }
 
-.project-foto-img {
-}
-
+/**
+  |============================
+  | overlay
+  |============================
+*/
 .box {
   position: relative;
   overflow: hidden;
 }
 
 .overlay {
-  position: absolut;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 
-  background-color: var(--iris);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  background-color: var(--iris);
+
+  display: flex;
 }
 
 .overlay-text {
   color: var(--cloud);
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 0 32px;
+  padding-top: 40px;
 }
 
 .box:hover .overlay {
   transform: translateY(0);
 }
 
+/**
+  |============================
+  | project card
+  |============================
+*/
 .project-card {
   display: flex;
   flex-direction: column;
@@ -463,6 +468,7 @@ ul {
   color: var(--navyblue);
   margin-bottom: 8px;
 }
+
 .project-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
