--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ ul {
 .link {
   text-decoration: none;
   color: currentColor;
+  transition: color;250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link:hover {
   color: var(--ocean);
@@ -137,15 +138,19 @@ ul {
   position: relative;
   padding-top: 24px;
   padding-bottom: 24px;
+  color: var(--ocean);
+  transition: background-color; 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link::after {
   content: '';
-  display: block;
+  display: block
   width: 100%;
   height: 4px;
   position: absolute;
   bottom: 0;
   left: 0;
+  bottom: -1px;
+  border-radius: 2px;
 }
 .nav-link.current::after {
   background-color: var(--ocean);
@@ -159,6 +164,7 @@ ul {
 .adress-list {
   display: flex;
   gap: 40px;
+
 }
 /**
   |============================
@@ -167,6 +173,7 @@ ul {
 */
 .hero {
   color: var(--white);
+  max-width: 1440px; 
   background-color: var(--navyblue);
   padding-bottom: 188px;
   padding-top: 188px;
@@ -221,10 +228,12 @@ ul {
 .button:hover {
   background-color: var(--ocean);
   border: 1px solid transparent;
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .button:focus {
   background-color: var(--ocean);
   border: 1px solid transparent;
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .section-title {
