--- a/css/styles.css
+++ b/css/styles.css
@@ -61,8 +61,9 @@ ul {
 .link {
   text-decoration: none;
   color: currentColor;
-  transition: color;250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .link:hover {
   color: var(--ocean);
 }
@@ -134,12 +135,12 @@ ul {
   letter-spacing: 0.02em;
   color: var(--navyblue);
 }
+
 .nav-link {
   position: relative;
   padding-top: 24px;
   padding-bottom: 24px;
-  color: var(--ocean);
-  transition: background-color; 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link::after {
   content: '';
@@ -147,11 +148,12 @@ ul {
   width: 100%;
   height: 4px;
   position: absolute;
-  bottom: 0;
   left: 0;
   bottom: -1px;
   border-radius: 2px;
+  background-color: var(--ocean);
 }
+
 .nav-link.current::after {
   background-color: var(--ocean);
 }
@@ -228,12 +230,12 @@ ul {
 .button:hover {
   background-color: var(--ocean);
   border: 1px solid transparent;
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .button:focus {
   background-color: var(--ocean);
   border: 1px solid transparent;
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .section-title {
