--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--navyblue);
+  color: #404bbf;
 }
 
 .nav-link {
@@ -184,8 +184,7 @@ ul {
   background-position: center;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
+      rgba(46, 47, 66, 0.7)),
     url(../images/hero-bg.jpg);
 }
 
@@ -230,12 +229,12 @@ ul {
 .button:hover {
   background-color: var(--ocean);
   border: 1px solid transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:focus {
   background-color: var(--ocean);
   border: 1px solid transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-title {
@@ -310,9 +309,8 @@ ul {
 /**
   |============================
   | tasks
-  |============================
-*/
-.tasks {
+
+  .tasks {
   padding-bottom: 120px;
 }
 
@@ -320,6 +318,9 @@ ul {
   display: flex;
   gap: 24px;
 }
+  |============================
+*/
+
 
 /**
   |============================
@@ -491,10 +492,8 @@ ul {
 /**
   |============================
   | footer
-  |============================
-*/
 
-.footer {
+  footer {
   background-color: var(--navyblue);
   padding: 100px 0 100px 0;
 }
@@ -533,4 +532,74 @@ ul {
   justify-content: center;
   align-items: center;
   gap: 16px;
+}
+
+  |============================
+*/
+
+.footer {
+  background-color: var(--navyblue);
+  padding: 100px 0 100px 0;
+}
+
+.footer-container {
+  display: flex;
+ align-items: baseline;
+
+}
+.footer-logo-box {
+margin-right: 120px;
+}
+
+.logo-footer {
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
+.footer-text {
+  color: var(--cloud);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  width: 264px;
+}
+
+.social-link-box {
+  display: inline-block;
+}
+
+.social-link-title {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02 em;
+  color: var(--white);
+  margin-bottom: 16px;
+}
+
+.social-link-list-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.social-link {
+  width: 100%;
+  height: 100%;
+  background-color: var (--iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: #31d0aa;
+}
+
+.social-link-icon {
+  fill: #f4f4fd;
 }
