--- a/css/styles.css
+++ b/css/styles.css
@@ -145,8 +145,6 @@ ul {
 .nav-link::after {
   content: '';
   display: block
-  width: 100%;
-  height: 4px;
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -400,8 +398,96 @@ ul {
 /**
   |============================
   | projects
+
+  .projects {
+  padding: 96px 0 120px 0;
+}
+
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
+}
+
+.project-item {
+  flex-basis: calc((100% - 24px * 2) / 3);
+}
+
+.project-foto {
+  background-color: var(--white);
+}
+
+/**
+  |============================
+  | overlay
+
+  box {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  background-color: var(--iris);
+
+  display: flex;
+}
+
+.overlay-text {
+  color: var(--cloud);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 0 32px;
+  padding-top: 40px;
+}
+
+.box:hover .overlay {
+  transform: translateY(0);
+}
   |============================
 */
+
+/**
+  |============================
+  | project card
+  .project-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  align-self: stretch;
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.project-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--navyblue);
+  margin-bottom: 8px;
+}
+
+.project-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--slate);
+}
+
+  |============================
+*/
+
 .projects {
   padding: 96px 0 120px 0;
 }
@@ -415,6 +501,14 @@ ul {
 
 .project-item {
   flex-basis: calc((100% - 24px * 2) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.project-item:hover .overlay-text {
+  transform: translateY(0%);
 }
 
 .project-foto {
@@ -489,51 +583,10 @@ ul {
   color: var(--slate);
 }
 
+
 /**
   |============================
   | footer
-
-  footer {
-  background-color: var(--navyblue);
-  padding: 100px 0 100px 0;
-}
-
-.footer-container {
-  display: flex;
-  gap: 120px;
-}
-
-.logo-footer {
-  display: inline-block;
-  margin-bottom: 16px;
-}
-
-.footer-text {
-  color: var(--cloud);
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  width: 264px;
-}
-
-.social-link-box {
-  display: inline-block;
-}
-
-.social-link-title {
-  font-family: Roboto;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02rem;
-  color: var(--white);
-  margin-bottom: 16px;
-}
-.social-link-list-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-}
-
   |============================
 */
 
@@ -572,7 +625,7 @@ margin-right: 120px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02 em;
+  letter-spacing: 0.02em;
   color: var(--white);
   margin-bottom: 16px;
 }
