--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,7 @@ ul {
   min-width: 169px;
   height: 56px;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /**
