--- a/css/styles.css
+++ b/css/styles.css
@@ -142,12 +142,14 @@ ul {
   padding-bottom: 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .nav-link::after {
   content: '';
-  display: block
+  display: block;
   position: absolute;
   left: 0;
   bottom: -1px;
+  height: 4px;
   border-radius: 2px;
   background-color: var(--ocean);
 }
@@ -164,7 +166,6 @@ ul {
 .adress-list {
   display: flex;
   gap: 40px;
-
 }
 /**
   |============================
@@ -173,7 +174,7 @@ ul {
 */
 .hero {
   color: var(--white);
-  max-width: 1440px; 
+  max-width: 1440px;
   background-color: var(--navyblue);
   padding-bottom: 188px;
   padding-top: 188px;
@@ -182,7 +183,8 @@ ul {
   background-position: center;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)),
+      rgba(46, 47, 66, 0.7)
+    ),
     url(../images/hero-bg.jpg);
 }
 
@@ -307,22 +309,6 @@ ul {
 
 /**
   |============================
-  | tasks
-
-  .tasks {
-  padding-bottom: 120px;
-}
-
-.tasks-set {
-  display: flex;
-  gap: 24px;
-}
-  |============================
-*/
-
-
-/**
-  |============================
   | team
   |============================
 */
@@ -398,94 +384,7 @@ ul {
 
 /**
   |============================
-  | projects
-
-  .projects {
-  padding: 96px 0 120px 0;
-}
-
-.project-list {
-  display: flex;
-  flex-wrap: wrap;
-  row-gap: 48px;
-  column-gap: 24px;
-}
-
-.project-item {
-  flex-basis: calc((100% - 24px * 2) / 3);
-}
-
-.project-foto {
-  background-color: var(--white);
-}
-
-/**
-  |============================
-  | overlay
-
-  box {
-  position: relative;
-  overflow: hidden;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  background-color: var(--iris);
-
-  display: flex;
-}
-
-.overlay-text {
-  color: var(--cloud);
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  padding: 0 32px;
-  padding-top: 40px;
-}
-
-.box:hover .overlay {
-  transform: translateY(0);
-}
-  |============================
-*/
-
-/**
-  |============================
-  | project card
-  .project-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  align-self: stretch;
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
-
-.project-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--navyblue);
-  margin-bottom: 8px;
-}
-
-.project-text {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--slate);
-}
-
+  | portfolio
   |============================
 */
 
@@ -505,7 +404,8 @@ ul {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .project-item:hover .overlay-text {
@@ -584,7 +484,6 @@ ul {
   color: var(--slate);
 }
 
-
 /**
   |============================
   | footer
@@ -598,11 +497,10 @@ ul {
 
 .footer-container {
   display: flex;
- align-items: baseline;
-
+  align-items: baseline;
 }
 .footer-logo-box {
-margin-right: 120px;
+  margin-right: 120px;
 }
 
 .logo-footer {
