--- a/css/styles.css
+++ b/css/styles.css
@@ -357,31 +357,36 @@ ul {
   margin-bottom: 8px;
 }
 
-.social-link-list {
+.social-list {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 24px;
 }
 
-.social-link-item {
+.social-item {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   background-color: var(--iris);
 }
+.social-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/**
-  |============================
-  | .social-link-list:hover,
-.social-link-list:focus {
+.social-link:hover,
+.social-link:focus {
   background-color: var(--ocean);
 }
 
-  |============================
-*/
-
-.social-link-icon {
+.social-icon {
   fill: var(--white);
 }
 
@@ -425,7 +430,12 @@ ul {
   overflow: hidden;
 }
 
-.overlay {
+.overlay-text {
+  color: var(--cloud);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
+
   position: absolute;
   top: 0;
   left: 0;
@@ -440,15 +450,7 @@ ul {
   display: flex;
 }
 
-.overlay-text {
-  color: var(--cloud);
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  padding: 0 32px;
-  padding-top: 40px;
-}
-
-.box:hover .overlay {
+.box:hover .overlay-text {
   transform: translateY(0);
 }
 
@@ -514,11 +516,11 @@ ul {
   width: 264px;
 }
 
-.social-link-box {
+.social-box {
   display: inline-block;
 }
 
-.social-link-title {
+.social-title {
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
@@ -528,29 +530,11 @@ ul {
   margin-bottom: 16px;
 }
 
-.social-link-list-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.footer .social-list {
   gap: 16px;
 }
 
-.social-link {
-  width: 100%;
-  height: 100%;
-  background-color: var (--iris);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-link:hover,
-.social-link:focus {
+.footer .social-link:hover,
+.footer .social-link:focus {
   background-color: #31d0aa;
-}
-
-.social-link-icon {
-  fill: #f4f4fd;
 }
