--- a/css/styles.css
+++ b/css/styles.css
@@ -64,9 +64,7 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover {
-  color: var(--ocean);
-}
+.link:hover,
 .link:focus {
   color: var(--ocean);
 }
@@ -97,6 +95,7 @@ ul {
 }
 .logo-header {
   margin-right: 76px;
+  padding: 24px 0;
 }
 
 /**
@@ -125,7 +124,6 @@ ul {
 .nav-list {
   display: flex;
   gap: 40px;
-  padding: 24px 0;
 }
 
 .nav-item {
@@ -133,28 +131,48 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #404bbf;
+  color: var(--navyblue);
 }
-
-.nav-link {
+/**
+  |============================
+  | .nav-link {
   position: relative;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  padding: 24px 0;
 }
 
-.nav-link::after {
+.nav-link:after {
   content: '';
-  display: block;
   position: absolute;
   left: 0;
   bottom: -1px;
+  width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: var(--ocean);
+  color: var(--ocean);
+}
+  |============================
+*/
+.nav-link {
+  position: relative;
+  display: block;
+  padding: 24px 0;
 }
 
-.nav-link .current::after {
+.nav-link::after {
+  position: absolute;
+  content: '';
+  display: block;
+  left: 0;
+  bottom: -1px;
+
+  width: 100%;
+  height: 4px;
+
+  border-radius: 2px;
+}
+
+.nav-link.current::after {
   background-color: var(--ocean);
 }
 
@@ -167,6 +185,10 @@ ul {
   display: flex;
   gap: 40px;
 }
+.adress-link {
+  padding: 24px 0;
+}
+
 /**
   |============================
   | hero
