--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ ul {
   text-decoration: none;
   color: currentColor;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--navyblue);
 }
 
 .link:hover,
@@ -131,35 +132,17 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--navyblue);
-}
-/**
-  |============================
-  | .nav-link {
-  position: relative;
-  display: block;
-  padding: 24px 0;
 }
 
-.nav-link:after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  color: var(--ocean);
-}
-  |============================
-*/
 .nav-link {
   position: relative;
   display: block;
   padding: 24px 0;
-  color: var(--ocean);
 }
 
+.nav-link.current {
+  color: var(--ocean);
+}
 .nav-link::after {
   position: absolute;
   content: '';
